--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,6 @@ android {
     namespace 'com.example.vyoriustestassingment'
     compileSdk 34
 
-    buildFeatures {
-        dataBinding true
-    }
 
     defaultConfig {
         applicationId "com.example.vyoriustestassingment"
@@ -48,8 +45,7 @@ dependencies {
     implementation libs.androidx.activity
     implementation libs.androidx.constraintlayout
     implementation libs.play.services.maps
-    def lottieVersion = "3.4.0"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.airbnb.android:lottie:3.4.0"
     implementation "com.mapbox.maps:android:11.2.0"
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
